Address a small layout issue

--- a/root/styles/prosilver/theme/kb.css
+++ b/root/styles/prosilver/theme/kb.css
@@ -179,15 +179,15 @@ a.kblink {
 }
 
 #kb_postbody .online .inner .kb_postbody {
-	width: 76%;	
+	width: 76%;
 }
 
 #kb_postbody .inner .kb_postbody{
-	width: 96%;	
+	width: 96%;
 }
 
 .kb_postbody li {
-	padding-top:4px;  
+	padding-top:4px;
 }
 
 .kb_postbody .profile-icons li {
@@ -216,13 +216,21 @@ a.kblink {
 	margin: 0 3px;
 }
 
+.kb_postbody .notice{
+	clear: none;
+}
+
 #kb_postbody{
 	padding: 0 1em 0 1em; /* padding here creates white space "inside the box." */
 }
 
 .clearfloat { /* this class should be placed on a div or break element and should be the final element before the close of a container that should fully contain a float */
 	clear:both;
-    height:0;
-    font-size: 1px;
-    line-height: 0px;
+	height:0;
+	font-size: 1px;
+	line-height: 0px;
+}
+
+#kb_postbody .post .corners-bottom{
+	clear:none;
 }
